CMS-22547 Adjustements based on review